crates/parser/src/tests/snapshots/kcl_parser__tests__expr__expr_with_paren_1.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"((2+3)\"####)"
---
Node {
    node: Paren(
        ParenExpr {
            expr: Node {
                node: Paren(
                    ParenExpr {
                        expr: Node {
                            node: Binary(
                                BinaryExpr {
                                    left: Node {
                                        node: NumberLit(
                                            NumberLit {
                                                binary_suffix: None,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 2,
                                        end_line: 1,
                                        end_column: 3,
                                    },
                                    op: Add,
                                    right: Node {
                                        node: NumberLit(
                                            NumberLit {
                                                binary_suffix: None,
                                                value: Int(
                                                    3,
                                                ),
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 4,
                                        end_line: 1,
                                        end_column: 5,
                                    },
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 5,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 1,
                end_line: 1,
                end_column: 6,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}
